@@ -29,6 +29,7 @@ distribution.
 #include <sstream>
 #endif
 
+namespace Ember {
 
 bool TiXmlBase::condenseWhiteSpace = true;
 
@@ -1623,4 +1624,6 @@ TiXmlHandle TiXmlHandle::ChildElement( const char* value, int count ) const
 			return TiXmlHandle( child );
 	}
 	return TiXmlHandle( 0 );
+}
+
 }
