@@ -24,6 +24,7 @@ distribution.
 
 #include <tinyxml/tinyxml.h>
 
+namespace Ember {
 // The goal of the seperate error file is to make the first
 // step towards localization. tinyxml (currently) only supports
 // latin-1, but at least the error messages could now be translated.
@@ -49,3 +50,5 @@ const char* TiXmlBase::errorString[ TIXML_ERROR_STRING_COUNT ] =
 	"Error document empty.",
 	"Error null (0) or unexpected EOF found in input stream.",
 };
+
+}
